src/objects/AWS_IAM_UserCredentials__c.object
<CustomObject>
    <fields>
        <fullName>Access_Key_Id__c</fullName>
        <label>Access Key Id</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bucket_Name__c</fullName>
        <label>Bucket Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Access_Key__c</fullName>
        <label>Secret Access Key</label>
        <length>41</length>
        <type>Text</type>
    </fields>
    <label>Amazon S3 Credential</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Amazon Credentials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amazon S3 Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>